# MiniPSI

./: .gitmodules  CMakeLists.txt  README.md
Tests/: NcoOT_Tests.cpp  OTOracleReceiver.h  OTOracleSender.h  OT_Tests.cpp  PSI_Tests.cpp  UnitTests.cpp  miniPSI_Tests.cpp  nOPRF_Tests.cpp
frontend/: main.cpp
libPSI/: CMakeLists.txt  PsiDefines.h
libPSI/ECDH/: DKT10PsiReceiver.cpp  DKT10PsiSender.cpp  EcdhPsiReceiver.cpp  EcdhPsiSender.cpp  JL10PsiReceiver.cpp  JL10PsiReceiver.h  JL10PsiSender.cpp  JL10PsiSender.h
libPSI/MiniPSI/: MiniReceiver.cpp  MiniReceiver.h  MiniSender.cpp  MiniSender.h
libPSI/MiniPSI_ristretto/: MiniReceiver_Ris.cpp  MiniReceiver_Ris.h  MiniSender_Ris.cpp  MiniSender_Ris.h
